--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
                         <span>Share</span>
                     </div>
                     <i class="fa-solid fa-angle-right"></i>
+                    <ul class="share-menu">
+                        <li>
+                            <i class="fa-brands fa-instagram"></i>
+                            <span>Instagram</span>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-twitter"></i>
+                            <span>Twitter</span>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-telegram"></i>
+                            <span>Telegram</span>
+                        </li>
+                    </ul>
                 </li>
                 <li class="item">
                     <i class="fa-regular fa-copy"></i>
